@@ -13434,6 +13434,121 @@ POST(sys_close_range)
       ML_(record_fd_close)(fd);
 }
 
+
+#define VKI_O_DIRECTORY    00200000
+#define VKI___O_TMPFILE    020000000
+#define VKI_O_TMPFILE (VKI___O_TMPFILE | VKI_O_DIRECTORY)
+
+// long syscall(SYS_openat2, int dirfd, const char *pathname,
+//             struct open_how *how, size_t size);
+PRE(sys_openat2)
+{
+   HChar  name[30];   // large enough
+   SysRes sres;
+   struct vki_open_how * how;
+
+   PRINT("sys_openat2 ( %ld, %#" FMT_REGWORD "x(%s), %#" FMT_REGWORD "x, %ld )",
+            SARG1, ARG2, (HChar*)(Addr)ARG2, ARG3, SARG4);
+   PRE_REG_READ4(long, "openat2",
+                    int, dfd, const char *, filename, struct vki_open_how *, how, vki_size_t, size);
+
+   PRE_MEM_RASCIIZ( "openat2(filename)", ARG2 );
+   PRE_MEM_READ( "openat2(how)", ARG3, sizeof(struct vki_open_how));
+
+   /* For absolute filenames, dfd is ignored.  If dfd is AT_FDCWD,
+      filename is relative to cwd.  When comparing dfd against AT_FDCWD,
+      be sure only to compare the bottom 32 bits. */
+   if (ML_(safe_to_deref)( (void*)(Addr)ARG2, 1 )
+       && *(Char *)(Addr)ARG2 != '/'
+       && ((Int)ARG1) != ((Int)VKI_AT_FDCWD)
+       && !ML_(fd_allowed)(ARG1, "openat2", tid, False))
+      SET_STATUS_Failure( VKI_EBADF );
+
+   how = (struct vki_open_how *)ARG3;
+
+   if (how && ML_(safe_to_deref) (how, sizeof(struct vki_open_how))) {
+      if (how->vki_mode) {
+         if (!(how->vki_flags & ((vki_uint64_t)VKI_O_CREAT | VKI_O_TMPFILE))) {
+            SET_STATUS_Failure( VKI_EINVAL );
+         }
+      }
+      if (how->vki_resolve & ~((vki_uint64_t)VKI_RESOLVE_NO_XDEV |
+                            VKI_RESOLVE_NO_MAGICLINKS |
+                            VKI_RESOLVE_NO_SYMLINKS |
+                            VKI_RESOLVE_BENEATH |
+                            VKI_RESOLVE_IN_ROOT |
+                            VKI_RESOLVE_CACHED)) {
+          SET_STATUS_Failure( VKI_EINVAL );
+      }
+   }
+
+   /* Handle the case where the open is of /proc/self/cmdline or
+      /proc/<pid>/cmdline, and just give it a copy of the fd for the
+      fake file we cooked up at startup (in m_main).  Also, seek the
+      cloned fd back to the start. */
+
+   VG_(sprintf)(name, "/proc/%d/cmdline", VG_(getpid)());
+   if (ML_(safe_to_deref)( (void*)(Addr)ARG2, 1 )
+       && (VG_(strcmp)((HChar *)(Addr)ARG2, name) == 0
+           || VG_(strcmp)((HChar *)(Addr)ARG2, "/proc/self/cmdline") == 0)) {
+      sres = VG_(dup)( VG_(cl_cmdline_fd) );
+      SET_STATUS_from_SysRes( sres );
+      if (!sr_isError(sres)) {
+         OffT off = VG_(lseek)( sr_Res(sres), 0, VKI_SEEK_SET );
+         if (off < 0)
+            SET_STATUS_Failure( VKI_EMFILE );
+      }
+      return;
+   }
+
+   /* Do the same for /proc/self/auxv or /proc/<pid>/auxv case. */
+
+   VG_(sprintf)(name, "/proc/%d/auxv", VG_(getpid)());
+   if (ML_(safe_to_deref)( (void*)(Addr)ARG2, 1 )
+       && (VG_(strcmp)((HChar *)(Addr)ARG2, name) == 0
+           || VG_(strcmp)((HChar *)(Addr)ARG2, "/proc/self/auxv") == 0)) {
+      sres = VG_(dup)( VG_(cl_auxv_fd) );
+      SET_STATUS_from_SysRes( sres );
+      if (!sr_isError(sres)) {
+         OffT off = VG_(lseek)( sr_Res(sres), 0, VKI_SEEK_SET );
+         if (off < 0)
+            SET_STATUS_Failure( VKI_EMFILE );
+      }
+      return;
+   }
+
+   /* And for /proc/self/exe or /proc/<pid>/exe case. */
+
+   VG_(sprintf)(name, "/proc/%d/exe", VG_(getpid)());
+   if (ML_(safe_to_deref)( (void*)(Addr)ARG2, 1 )
+       && (VG_(strcmp)((HChar *)(Addr)ARG2, name) == 0
+           || VG_(strcmp)((HChar *)(Addr)ARG2, "/proc/self/exe") == 0)) {
+      sres = VG_(dup)( VG_(cl_exec_fd) );
+      SET_STATUS_from_SysRes( sres );
+      if (!sr_isError(sres)) {
+         OffT off = VG_(lseek)( sr_Res(sres), 0, VKI_SEEK_SET );
+         if (off < 0)
+            SET_STATUS_Failure( VKI_EMFILE );
+      }
+      return;
+   }
+
+   /* Otherwise handle normally */
+   *flags |= SfMayBlock;
+}
+
+POST(sys_openat2)
+{
+   vg_assert(SUCCESS);
+   if (!ML_(fd_allowed)(RES, "openat2", tid, True)) {
+      VG_(close)(RES);
+      SET_STATUS_Failure( VKI_EMFILE );
+   } else {
+      if (VG_(clo_track_fds))
+         ML_(record_fd_open_with_given_name)(tid, RES, (HChar*)(Addr)ARG2);
+   }
+}
+
 #undef PRE
 #undef POST
 
