@@ -41,6 +41,7 @@
 
 #define __NR_clone3		435
 #define __NR_close_range	436
+#define __NR_openat2        437
 
 #define __NR_faccessat2		439
 
